2013-08-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c src/tables.c src/tables.h src/unset.c src/axis.c src/show.c
	src/save.c docs/gnuplot.doc:  Support minor tics on polar axis.

2013-08-20  Jon Gjengset <jon@thesquareplanet.com>

	* src/term_api.h src/gplt_x11.c src/mouse.c term/x11.trm term/qt.trm
	term/wxt.trm term/README src/wxterminal/wxt_gui.cpp
	src/wxterminal/wxt_term.h src/qtterminal/QtGnuplotEvent.h
	src/qtterminal/QtGnuplotScene.cpp src/qtterminal/qt_term.cpp
	src/qtterminal/qt_term.h:
	Add term->modify_plots() interface (and implementations for wxt, qt and
	x11) for applying operations to every plot in a graph. Current use cases
	include hiding and showing all plots and inverting plot visibility.
	Useful in situations where many sets of data are plotted initially, but
	the user only wishes to focus on a few.

2013-08-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/win/wgraph.c:  Must honor TERM_LAYER_RESET.

	* term/x11.trm (X11_layer):  ignore TERM_LAYER_RESET in multiplot.

	* src/term.c (term_start_multiplot):  Several terminals (qt, wxt, x11)
	ignore TERM_LAYER_RESET during multiplot.  Thus in order to correctly 
	initialize the plot structures, the reset must happen before the
	multiplot flag is set.  Without this change, mouse toggle of 
	multiplots can trigger an access violation.  Bug fix.

2013-08-16  Allin Cottrell  <cottrell@wfu.edu>

	* src/internal.c (GP_MATHERR): 1st part of win64 compatibility patch.
	The matherr() mechanism is not used by win64. It's also not used by
	current linux but it doesn't hurt to leave it in place for now.

	* src/win/wprinter.c src/win/winmain.c src/win/wtext.c src/win/wmenu.c
	src/win/wpause.c src/win/wgraph.c:
	2nd part of win64 compatability patch.  All changes are #ifdef _WIN64.

	src/win/wgnuplot.rc src/win/wgnuplot.exe.manifest64:
	The file win/wgnuplot.exe.manifest specifies the processorArchitecture
	as "X86". For an x86_64 build this must be changed to "amd64"