@@ -1,3 +1,11 @@
+2013-08-20  Kyle <elconquistador@users.sourceforge.net>
+
+	* src/fit.c (regress): The value of chisq was corrupted in the process
+	of scaling the parameter errors.  This isn't a problem by itself, but a
+	patch applied in April 2013 introduced a call to show_results() that
+	passed in the corrupted value.
+	Bug #1275
+
 2013-08-20  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/set.c src/tables.c src/tables.h src/unset.c src/axis.c src/show.c
